metadatafullcopy/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>National_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (National Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Month_Costs__c</fullName>
        <description>Field populated by Timberline integration to indicate costs allotted for next month</description>
        <label>Next Month Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Month_Dollars_Paid__c</fullName>
        <description>Field populated via Timberline integration to indicate dollars paid for next month</description>
        <label>Next Month Dollars Paid-AP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Month_Work_Billed__c</fullName>
        <description>Field populated via Timberline integration to indicate the work billed for next month</description>
        <label>Next Month Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Email_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Email Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Office object to indicate what office the Job is taking place out of.</description>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Field to indicate the ATI office associated with the job.
(Hidden Field) Only for Apex Triggers Code and other reports not for UI.</description>
        <formula>Office2__r.Name</formula>
        <label>Office Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Home_Office_Logic_del__c</fullName>
        <description>Code for Operations Manager&apos;s Home Office. Used for Reporting purposes.</description>
        <formula>if( text( Project_Manager_new__r.Office__c ) = text($User.Office__c ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Home Office Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_logic__c</fullName>
        <description>Used for reporting purpose.</description>
        <formula>if(Project_Manager_new__r.Id = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operations Manager assigned to the job</description>
        <label>Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Supervisor__c</fullName>
        <description>If the Supervisor on the job isn&apos;t listed in the &quot;Env/Contents Supervisor&quot; drop-down menu, enter the name here in the format &quot;Last, First&quot;.</description>
        <label>Other Supervisor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Owner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_Email_For_National_Account_Workflow__c</fullName>
        <label>PD Email For National Account Workflow</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For PM time approval only. PM not assigned to this job.</inlineHelpText>
        <label>PM Approval Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Email_For_National_Account_Workflow__c</fullName>
        <label>PM Email For National Account Workflow</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_Hayward_and_San_Jose_Logic__c</fullName>
        <description>Evaluates which office a Project Director is from.</description>
        <formula>CASE(Project_Manager__r.Office__c, &apos;San Francisco&apos;, 1, &apos;San Jose&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD - Hayward and San Jose Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Home_Office_Logic__c</fullName>
        <description>Project Director&apos;s home office code</description>
        <formula>if( text(Project_Manager__r.Office__c) = text($User.Office__c ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD Home Office Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Home_Office__c</fullName>
        <description>Project Director&apos;s home office</description>
        <formula>IF( Project_Manager__r.FirstName = &quot;ADC&quot;, Office2__r.Name, TEXT(Project_Manager__r.Office__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD Home Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Manager_s_Email__c</fullName>
        <description>Project Director&apos;s Manager&apos;s Email.</description>
        <formula>Project_Manager__r.Manager.Email</formula>
        <label>PD Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Manager_s_Full_Name__c</fullName>
        <description>Project Director&apos;s Manager&apos;s Full Name</description>
        <formula>Project_Manager__r.Manager.FirstName &amp; &apos; &apos; &amp;  Project_Manager__r.Manager.LastName</formula>
        <label>PD Manager&apos;s Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Manager_s_Phone__c</fullName>
        <description>Project Director&apos;s Manager&apos;s Phone.</description>
        <formula>Project_Manager__r.Manager.MobilePhone</formula>
        <label>PD Manager&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Manager_s_Title__c</fullName>
        <description>Project Director&apos;s Manager&apos;s Title.</description>
        <formula>Project_Manager__r.Manager.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD Manager&apos;s Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Super_Ops_1__c</fullName>
        <description>Formula field used to populate the Survey email template, in the case that the Superintendent or the Ops Manager is the same as the Project Manager.</description>
        <formula>IF (OR(Project_Manager_new__c = Project_Manager__c, PM_Approval_Only__c = true), 
Project_Manager_FirstName__c &amp; &quot; &quot; &amp; Project_Manager_LastName__c &amp; &quot; your Project Director&quot;, 

Project_Manager_FirstName__c &amp; &quot; &quot; &amp; Project_Manager_LastName__c &amp; &quot; your Project Director&quot; &amp; &quot; and &quot; &amp; Project_Manager_new__r.FirstName &amp; &quot; &quot; &amp; Project_Manager_new__r.LastName &amp; &quot; your Project Manager&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Super Ops - 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Super_Ops__c</fullName>
        <description>Formula field used in 3 Day survey reminder and 6 day survey reminder, in the case that the Superintendent or the Ops Manager is the same as the Project Manager.</description>
        <formula>IF (OR(Project_Manager_new__c  = Project_Manager__c, PM_Approval_Only__c = true), 
Project_Manager_new__r.FirstName &amp; &quot; &quot; &amp;  Project_Manager_new__r.LastName, 
Project_Manager_FirstName__c &amp; &quot; &quot; &amp; Project_Manager_LastName__c &amp; &quot; &quot; &amp; &quot;and&quot; &amp; &quot; &quot; &amp; Project_Manager_new__r.FirstName &amp; &quot; &quot; &amp;  Project_Manager_new__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Super Ops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Amount__c</fullName>
        <label>PN Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Recording_Date__c</fullName>
        <label>PN Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PN_Recording_Number__c</fullName>
        <label>PN Recording Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Request_Date__c</fullName>
        <label>PN Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Job_Name__c</fullName>
        <description>Previous job name (prior to the most recent change)</description>
        <label>Prev Job Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriContEmail__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriContEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriContMobPhone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriContMobPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriContWkPhone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriContWkPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <description>Primary Account of Job-- referenced in New Job VF page</description>
        <label>Primary Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caller Account</fullName>
                </value>
                <value>
                    <fullName>Project Site Contact</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Creation__c</fullName>
        <inlineHelpText>Set this field to the name of the template to create the project.</inlineHelpText>
        <label>Project Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <description>Project Director&apos;s email pulled from User record</description>
        <formula>Project_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_FirstName__c</fullName>
        <description>Project Director&apos;s First Name</description>
        <formula>Project_Manager__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director&apos;s FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Full_Name__c</fullName>
        <formula>Project_Manager__r.FirstName &amp;&quot; &quot;&amp; Project_Manager__r.LastName</formula>
        <label>Project Director&apos;s Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_LastName__c</fullName>
        <description>Project Director&apos;s Last Name</description>
        <formula>Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director&apos;s LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Logic__c</fullName>
        <formula>if( Project_Manager__r.Id = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_New_Full_Name__c</fullName>
        <description>Also used in : 
Workflow: Send client welcome email when job is marked won 
Customer Survey formula Field: Super_Ops</description>
        <formula>Project_Manager_new__r.FirstName &amp;&quot; &quot;&amp; Project_Manager_new__r.LastName</formula>
        <label>Project Manager&apos;s Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_New_Logic__c</fullName>
        <description>This field checks whether the current user is listed as the Project Manager (formerly Superintendent or Ops Manager) on the job. It is used to filter views.</description>
        <formula>IF($User.Id = Project_Manager_new__c, 1, 0)</formula>
        <label>Project Manager Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Phone__c</fullName>
        <formula>Project_Manager__r.MobilePhone</formula>
        <label>Project Director&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Timber__c</fullName>
        <description>Project Director&apos;s name in appropriate format to send to Timberline</description>
        <formula>if(!ISBLANK( Project_Manager__r.LastName ), Project_Manager__r.LastName &amp; if(!ISBLANK(Project_Manager__r.FirstName ), &quot;, &quot; &amp; Project_Manager__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director Timber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Manager assigned to this job</description>
        <label>Project Director</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Executive Management, Project Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunitiespm1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_new__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will up updated via process builder depending on the Ops manager and/or Superintendent.</description>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Name + &quot; Project&quot;</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address_2__c</fullName>
        <label>Project Site Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address_CityStZIP__c</fullName>
        <formula>Project_Site_City__c &amp; &quot;, &quot; &amp; Project_Site_State__c &amp; &quot; &quot; &amp; IF(LEN( Project_Site_Zipcode__c )&lt;5 , &quot;0&quot; &amp; Project_Site_Zipcode__c, Project_Site_Zipcode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Address CityStZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address_Concat__c</fullName>
        <formula>IF(ISBLANK(Project_Site_Address_2__c), Project_Site_Address__c &amp; &quot;, &quot; &amp; Project_Site_City__c &amp; &quot;, &quot; &amp; Project_Site_State__c &amp; &quot; &quot; &amp; Project_Site_Zipcode__c, Project_Site_Address__c &amp; &quot;, &quot; &amp; Project_Site_Address_2__c &amp; &quot;, &quot; &amp; Project_Site_City__c &amp; &quot;, &quot; &amp; Project_Site_State__c &amp; &quot; &quot; &amp; Project_Site_Zipcode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Address Concat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address_Link__c</fullName>
        <description>Project site address link to google maps</description>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;&amp;Project_Site_Address__c&amp;&quot;, &quot;&amp;Project_Site_Address_2__c&amp;&quot;, &quot;&amp;Project_Site_City__c&amp;&quot;, &quot;&amp;Project_Site_State__c&amp;&quot; &quot;&amp;Project_Site_Zipcode__c, Project_Site_Address_Concat__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Address Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address__c</fullName>
        <description>Address of job project site</description>
        <label>Project Site Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Call_Result_Message__c</fullName>
        <label>Project Site Call Result Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Site_City_Length__c</fullName>
        <formula>LEN( Project_Site_City__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site City Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Site_City__c</fullName>
        <description>City of job project site</description>
        <label>Project Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field was created to contain information for Project Site Contacts that are Person Account (NOT Contact) records.</description>
        <label>Project Site Contact Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Email__c</fullName>
        <description>Project site contact&apos;s email address</description>
        <formula>Project_Site_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Site Contact Name</description>
        <label>Project Site Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Project Site Contact Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Only_Name__c</fullName>
        <formula>Project_Site_Contact_Name__r.FirstName &amp;  &apos; &apos; &amp; Project_Site_Contact_Name__r.LastName</formula>
        <label>Project Site Contact Only Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Fax__c</fullName>
        <description>Project site contact&apos;s fax number</description>
        <formula>Project_Site_Contact_Name__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Name_Fotoin__c</fullName>
        <description>two spaces between number and name</description>
        <formula>Job_Number__c + &quot;  &quot; +  Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Name Fotoin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Name__c</fullName>
        <description>Project site name</description>
        <label>Project Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Site Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_State__c</fullName>
        <description>Project Site State</description>
        <label>Project Site State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Zipcode__c</fullName>
        <description>Project Site Zipcode</description>
        <label>Project Site Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Project Type</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Certified</fullName>
                    <label>Prevailing Wage / Certified</label>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Received_Date__c</fullName>
        <description>Date that the Quality Assurance Survey was received from the customer related to this job.</description>
        <label>QA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quality Assurance Survey Sent</description>
        <label>QA Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance_Recd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that the Quality Assurance Survey was received from the client related to this job.</description>
        <label>Quality Assurance Recd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_to_Date_Costs__c</fullName>
        <description>Field populated via Timberline integration to indicate costs incurred this quarter.</description>
        <label>Quarter-to-Date Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_to_Date_Dollars_Paid__c</fullName>
        <description>Field populated via Timberline integration to indicate dollars paid this quarter</description>
        <label>Quarter-to-Date Dollars Paid-AP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_to_Date_Work_Billed__c</fullName>
        <description>Field populated via Timberline integration to indicate work billed this quarter</description>
        <label>Quarter-to-Date Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receivable_Balance__c</fullName>
        <description>Field populated via Timberline integration to indicate the receivable balance.</description>
        <label>Receivable Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ATI has received a reference letter from the customer for this job</description>
        <label>Reference Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the individual that referred ATI to this customer</description>
        <label>Referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referred by)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remove_SFRecordID_from_Timberline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove SFRecordID from Timberline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repairs_Needed__c</fullName>
        <description>used by managed repair programs</description>
        <label>Will Repairs Be Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <label>Yes-Request a structure assignment from TPA/Carrier</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Receivable__c</fullName>
        <label>Retention Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SMS opt out field for 360 SMS</description>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used for consolidated sending of SMS from Process Builder. Set this field to send SMS.</description>
        <label>SMS Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tdc_tsw__Message_Template__c.tdc_tsw__ObjectName__c</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Exemption_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication of sales tax exemption form.</description>
        <label>Sales Tax Exemption Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Prelim_Last_Modified_By__c</fullName>
        <description>Field populated via workflow &apos;Send Prelim Last Modified&apos; to indicate the person that last changed the &apos;Send Prelim&apos; field.</description>
        <label>Send Prelim Last Modified By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Prelim_Last_Modified_Date_Time__c</fullName>
        <description>Field populated via &apos;Send Prelim Last Modified&apos; workflow to indicate the date that the &apos;Send Prelim&apos; field was last changed.</description>
        <label>Send Prelim Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Prelim__c</fullName>
        <label>Send Prelim</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Superintendent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to associate the user who is the Structure Superintendent associated with this Job.</description>
        <label>Structure Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesSS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_By__c</fullName>
        <description>Field to indicate which Admin submitted the new job for approval-- fed by Job Approval Process Initial Submission Actions field update.</description>
        <label>Submitted for Approval By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Super_Different_In_Timberline__c</fullName>
        <description>Checkbox to note if there is a discrepancy between SFDC and Timberline regarding the Superintendent</description>
        <formula>IF(Superintendent__c &lt;&gt; Super_from_Timberline_PM__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Different In Timberline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Home_Office_Logic__c</fullName>
        <description>Project Manager&apos;s office code</description>
        <formula>if( text(  Project_Manager_new__r.Office__c  ) = text($User.Office__c ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager&apos;s Home Office Logic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Super_Home_Office__c</fullName>
        <description>Project Manager&apos;s home office</description>
        <formula>IF(Project_Manager_new__r.FirstName = &quot;ADC&quot;,  Office2__r.Name  , TEXT(Project_Manager_new__r.Office__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager&apos;s Home Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Logic__c</fullName>
        <description>Used for reports to select super&apos;s own jobs.</description>
        <formula>if(Project_Manager_new__r.Id = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Superintendent Logic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Super_Ops_Email__c</fullName>
        <description>Checking for Project Manager&apos;s email address</description>
        <formula>Project_Manager_new__r.Email</formula>
        <label>Project Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Ops_Phone__c</fullName>
        <description>Displays Project Manager&apos;s mobile number</description>
        <formula>Project_Manager_new__r.MobilePhone</formula>
        <label>Project Manager&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_from_Timberline_PM__c</fullName>
        <description>Field fed by Timberline integration to indicate the Superintendent assigned to the job captured in Timberline</description>
        <label>Super from Timberline (PM)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>